Debugged to get working now with new write direct to CSV.
Will update version data to run with the first line (head +1) and write the CSV with _version.csv so we can build up some history

--- a/http.service
+++ b/http.service
@@ -6,7 +6,7 @@ After=multi-user.target
 Type=simple
 Restart=always
 WorkingDirectory=/home/ubuntu/fermmon
-ExecStart=/usr/bin/python python -m http.server
+ExecStart=/usr/bin/python -m http.server
 
 [Install]
 WantedBy=multi-user.target
