--- a/fermmon.service
+++ b/fermmon.service
@@ -6,7 +6,7 @@ After=multi-user.target
 Type=simple
 Restart=always
 WorkingDirectory=/home/ubuntu/fermmon
-ExecStart=/usr/bin/python /home/ubuntu/fermmon/fermmon.py > /home/ubuntu/fermmon/fermmon.log 2>&1
+ExecStart=/usr/bin/python /home/ubuntu/fermmon/fermmon.py
 
 [Install]
 WantedBy=multi-user.target
