Major changes to make it into a php slim PWA with sqlite

--- a/http.service
+++ b/http.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=http.server
+Description=Legacy Python HTTP server (deprecated - use Apache/nginx instead)
 After=multi-user.target
 
 [Service]
