Updates as we test install

--- a/apache-fermmon.conf
+++ b/apache-fermmon.conf
@@ -1,7 +1,29 @@
 # Apache virtual host for fermmon (Raspberry Pi)
-# Copy to /etc/apache2/sites-available/fermmon.conf or include in existing config
 #
-# Then: sudo a2ensite fermmon && sudo systemctl reload apache2
+# For a server with no other sites:
+#
+#   1. Install Apache and PHP:
+#      sudo apt install apache2 php php-sqlite3 php-mbstring libapache2-mod-php
+#
+#   2. Enable mod_rewrite (required for clean URLs):
+#      sudo a2enmod rewrite
+#
+#   3. Copy this file and edit the path if needed:
+#      sudo cp apache-fermmon.conf /etc/apache2/sites-available/fermmon.conf
+#      # Edit DocumentRoot if fermmon is not in /home/ubuntu/fermmon
+#
+#   4. Disable default site, enable fermmon:
+#      sudo a2dissite 000-default
+#      sudo a2ensite fermmon
+#
+#   5. Reload Apache:
+#      sudo systemctl reload apache2
+#
+#   6. Fix "readonly database" – Apache (www-data) needs write access to data/:
+#      sudo ./scripts/setup-web-permissions.sh
+#      sudo systemctl restart apache2
+#
+# Access via http://<server-ip>/ or http://fermmon.local/ (add to /etc/hosts if needed)
 
 <VirtualHost *:80>
     ServerName fermmon.local
