Summary of changes: 1. apache-fermmon.conf Added LogLevel warn so notice-level messages (including mod_fcgid "Accepted"/"Closing") are no longer written to the error log. 2. README.md Added LogLevel warn to the SSL VirtualHost example. 3. docs/debugging.md Documented the access log path and that LogLevel warn reduces connection noise. Clarified that the access log (fermmon-access.log) is where to inspect real requests. After updating your Apache config, reload Apache: sudo systemctl reload apache2

--- a/apache-fermmon.conf
+++ b/apache-fermmon.conf
@@ -29,6 +29,9 @@
     ServerName fermmon.local
     DocumentRoot /home/ubuntu/fermmon/web/public
 
+    # Reduce mod_fcgid connection noise (Accepted/Closing) in error log; keep real requests in access log
+    LogLevel warn
+
     <Directory /home/ubuntu/fermmon/web/public>
         Options -Indexes +FollowSymLinks
         AllowOverride All
